[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/player_instance.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.97

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.45, 0.318, 0.45 )

[sub_resource type="SphereShape" id=3]

[node name="player_instance" type="KinematicBody"]
script = ExtResource( 1 )

[node name="body_collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.109, 0 )
shape = SubResource( 1 )

[node name="feet_collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.075, 0 )
shape = SubResource( 4 )

[node name="player_model" type="Spatial" parent="."]
transform = Transform( 1.65, 0, 0, 0, 1.65, 0, 0, 0, 1.65, 0, -1.385, 0 )

[node name="rotation_helper" type="Spatial" parent="."]

[node name="player_camera" type="Camera" parent="rotation_helper"]
transform = Transform( -1, 0, -8.74227e-08, 0, 1, 0, 8.74227e-08, 0, -0.999999, 0, 1.4, -4.4 )

[node name="interact_area" type="Area" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36892, 1 )

[node name="interact_collision" type="CollisionShape" parent="rotation_helper/interact_area"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="movement_tween" type="Tween" parent="."]

[connection signal="timeout" from="network_tick_rate" to="." method="_on_network_tick_rate_timeout"]
